// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer/components/Oops.tsx should render itself & its children - fallback to unknown error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="h-screen prc-Stack-Stack-WJVsK"
        data-align="center"
        data-direction="vertical"
        data-justify="center"
        data-padding="spacious"
        data-wrap="nowrap"
      >
        <div
          class="prc-Stack-Stack-WJVsK"
          data-align="center"
          data-direction="vertical"
          data-gap="condensed"
          data-justify="center"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="prc-Stack-Stack-WJVsK"
            data-align="center"
            data-direction="vertical"
            data-gap="spacious"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div
              class="Box-sc-g0xbh4-0 text-5xl"
            >
              <img
                alt="🤔"
                class="emoji"
                draggable="false"
                src="/mock/images/assets/1f914.svg"
              />
            </div>
            <div
              class="Box-sc-g0xbh4-0 text-xl font-semibold"
            >
              Oops! Something went wrong
            </div>
          </div>
          <div
            class="Box-sc-g0xbh4-0 text-center"
          >
            Please try again later.
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="h-screen prc-Stack-Stack-WJVsK"
      data-align="center"
      data-direction="vertical"
      data-justify="center"
      data-padding="spacious"
      data-wrap="nowrap"
    >
      <div
        class="prc-Stack-Stack-WJVsK"
        data-align="center"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="center"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div
          class="prc-Stack-Stack-WJVsK"
          data-align="center"
          data-direction="vertical"
          data-gap="spacious"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Box-sc-g0xbh4-0 text-5xl"
          >
            <img
              alt="🤔"
              class="emoji"
              draggable="false"
              src="/mock/images/assets/1f914.svg"
            />
          </div>
          <div
            class="Box-sc-g0xbh4-0 text-xl font-semibold"
          >
            Oops! Something went wrong
          </div>
        </div>
        <div
          class="Box-sc-g0xbh4-0 text-center"
        >
          Please try again later.
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/Oops.tsx should render itself & its children - specified error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="h-screen prc-Stack-Stack-WJVsK"
        data-align="center"
        data-direction="vertical"
        data-justify="center"
        data-padding="spacious"
        data-wrap="nowrap"
      >
        <div
          class="prc-Stack-Stack-WJVsK"
          data-align="center"
          data-direction="vertical"
          data-gap="condensed"
          data-justify="center"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="prc-Stack-Stack-WJVsK"
            data-align="center"
            data-direction="vertical"
            data-gap="spacious"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div
              class="Box-sc-g0xbh4-0 text-5xl"
            >
              <img
                alt="🔥"
                class="emoji"
                draggable="false"
                src="/mock/images/assets/1f525.svg"
              />
            </div>
            <div
              class="Box-sc-g0xbh4-0 text-xl font-semibold"
            >
              Error title
            </div>
          </div>
          <div
            class="Box-sc-g0xbh4-0 text-center"
          >
            Error description
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="h-screen prc-Stack-Stack-WJVsK"
      data-align="center"
      data-direction="vertical"
      data-justify="center"
      data-padding="spacious"
      data-wrap="nowrap"
    >
      <div
        class="prc-Stack-Stack-WJVsK"
        data-align="center"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="center"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div
          class="prc-Stack-Stack-WJVsK"
          data-align="center"
          data-direction="vertical"
          data-gap="spacious"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Box-sc-g0xbh4-0 text-5xl"
          >
            <img
              alt="🔥"
              class="emoji"
              draggable="false"
              src="/mock/images/assets/1f525.svg"
            />
          </div>
          <div
            class="Box-sc-g0xbh4-0 text-xl font-semibold"
          >
            Error title
          </div>
        </div>
        <div
          class="Box-sc-g0xbh4-0 text-center"
        >
          Error description
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
